2004-09-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b191

	* Fix: Change 'delete' to 'deleteButton' to prevent the JS errors
	  onsubmit

2004-09-15  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b190

	* Fix:  Added putenv("LC_ALL" ...) in lib/lang.php to fix problems on FreeBSD 4.10

2004-09-12  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b189

	* Change: HTML cleanup

	* Change: Move the adminOptions form tags inside the table, and apply the necessary 
	  CSS (margin-bottom:0px) so that IE displays it correctly.
	
	* Change: Applied form CSS in a couple other locations to try and unify IE/Mozilla

	* Fix: Remove duplicated globals call from breadcrumb.inc

2004-09-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b188

	* Add: Add support for 'Coral', a peer-to-peer webcache to init.php
	  http://gallery.menalto.com/index.php?name=PNphpBB2&file=viewtopic&p=94428#94428

	* Change:  Correct several uses of preg* to ereg, to stick with the G1 standard

	* Fix: Inline comment posting in view_photo

	* Change: A bit of whitespace fixing

2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b187

	* Fix: Missing paren in init.php

2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b186

	* Fix: Badly renamed button in resize_photo

	* Change:  Make register_globals a "Serious Warning!"/"Continue at own risk..." in
	  the config wizard.

	* Change:  Internally "disable" register_globals in init.php by calling unset() on
	  each $$key from $_REQUEST.  The idea is that this will be a workaround for
	  Geeklog embedding, but it will still give us the extra security we need.

	* Fix: Correct the 'Warning' code in check.inc to behave like the failure code,
	  and remove the 'nocolor' flag, which was unnecessary.

2004-09-11  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b185

	* New: Added images/favicon.ico as favicon. Inserted via common_header()

	* Change: Little html output beautify in albums.php and view_album.php
