@@ -1,3 +1,12 @@
+2004-09-15  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b192
+
+	* Fix: Use of dirname(dirname()) in setup was incorrect.  GALLERY_BASE
+	  should be used instead, due to Debian.
+
+	* Change: Rename findOrphans() to findOrphanedAlbums()
+
+	* Add: Stub function for findOrphanedImages() in find_orphans.php
+
 2004-09-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b191
 
 	* Fix: Change 'delete' to 'deleteButton' to prevent the JS errors
